# vdapp3-financial-newsletter-gekkos

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT_GUIDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
apps/backend/: feeds.yaml
apps/web/: .env.example  README.md  middleware.ts  next.config.js  package.json  tailwind.config.ts
apps/worker/: README.md  package.json  tsconfig.json
archive/: create_dirs.ps1
docs/: DEPLOYMENT_READY.md  DEPLOY_NOW.txt  DRUCKENMILLER_CHARTS.md  LLM_INTEGRATION.md  QUICK_REFERENCE.txt  README.md  READY_TO_DEPLOY.md
docs/2024-11-24/: 00_SESSION_SUMMARY.md  API_REFERENCE.md  DEPLOYMENT_READY.md  PHASE_4_5_ROADMAP.md  QUICK_START.md  VERCEL_ENV_SETUP.md  WORKER_FOLDER_EXPLAINED.md  WORKER_OPTIMIZATION_COMPLETE.md  pyproject.toml
docs/2025-11-20/: API_INTEGRATION_STANDARDS.md  API_OPTIMIZATION_SUMMARY.md  AUTH_BACKEND_COMPLETE.md  AUTH_IMPLEMENTATION_STEPS.md  BACKEND_DEPLOYMENT_CHECKLIST.md  BACKEND_WAY_OF_WORKING.md  CACHE_QUICK_REFERENCE.md  CACHING_STRATEGY.md  CRYPTO_API_FIXES.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_SETUP.md  FEATURES_4_5_README.md  FILES_CREATED.md  HARDCODED_ITEMS_AUDIT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_READY.md  ONBOARDING.md  OPTIMIZATION_GUIDE_START_HERE.md  PHASE_2_GUIDE.md  QUICK_START_API_INTEGRATION.md  README_OPTIMIZATION.md  ROADMAP_PREMIUM_COMPLETE.md  SESSION_SUMMARY_V2.md  SUMMARY.txt  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT_GUIDE.md  WEB_WORKER_ANALYSIS.md  WORKER_IMPLEMENTATION_SUMMARY.md  create-structure.ps1
documentation/2024-11-24/: COMPLETION_REPORT.md  (+15 more)
(+152 files in other folders)
