[tool.poetry]
name = "gekko-newsletter-backend"
version = "0.1.0"
description = "FastAPI backend for finance intelligence platform"
authors = ["Vivacity Digital <info@vivacitydigital.com.au>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
reportlab = "^4.0.7"
openai = "^1.3.7"
anthropic = "^0.7.8"
yfinance = "^0.2.17"
coingecko = "^3.0.0"
apscheduler = "^3.10.4"
redis = "^5.0.1"
celery = "^5.3.4"
python-dateutil = "^2.8.2"
youtube-transcript-api = "^0.6.1"
weasyprint = "^60.1"
plotly = "^5.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"